WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231218
Shadowing of @font-palette-values rules doesn't work
https://bugs.webkit.org/show_bug.cgi?id=231218
Summary
Shadowing of @font-palette-values rules doesn't work
Myles C. Maxfield
Reported
2021-10-04 23:48:09 PDT
-
Attachments
Patch
(6.55 KB, patch)
2021-10-06 23:46 PDT
,
Myles C. Maxfield
wenson_hsieh
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-10-04 23:48:41 PDT
<
rdar://problem/83872258
>
Myles C. Maxfield
Comment 2
2021-10-06 23:46:08 PDT
Created
attachment 440475
[details]
Patch
EWS Watchlist
Comment 3
2021-10-06 23:47:16 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
Myles C. Maxfield
Comment 4
2021-10-07 16:37:14 PDT
Committed
r283756
(
242677@main
): <
https://commits.webkit.org/242677@main
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug