Shadowing of @font-palette-values rules doesn't work https://bugs.webkit.org/show_bug.cgi?id=231218 <rdar://problem/83872258>

Reviewed by Wenson Hsieh.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-fonts/font-palette-32-expected.html: Added.
* web-platform-tests/css/css-fonts/font-palette-32.html: Added.

Source/WebCore:

https://drafts.csswg.org/css-fonts-4/#font-palette-values says:
> When a given descriptor occurs multiple times in a given @font-palette-values rule,
> only the last descriptor declaration is used.

Test: imported/w3c/web-platform-tests/css/css-fonts/font-palette-32.html

* css/CSSFontSelector.cpp:
(WebCore::CSSFontSelector::buildStarted):
(WebCore::CSSFontSelector::addFontPaletteValuesRule):
(WebCore::CSSFontSelector::lookupFontPaletteValues):
* css/CSSFontSelector.h:

Canonical link: https://commits.webkit.org/242677@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283756 268f45cc-cd09-0410-ab3c-d52691b4dbfc